test/success/ptr/raw/main.sk
module Main {

struct Foo {
    bar: Bar
}

struct Bar {
    value: Int
}

@safe
fn main() {
    let foo = Foo(bar: Bar(value: 42));
    let bar: *Bar = &raw foo.bar;
}

}