test/errors/borrowcheck/field_borrow/main.sk
module Main {

struct Foo {
    bar: Bar
}

struct Bar {
    value: Int
}

fn sink[T](t: T) {}

fn main() {
    let foo = Foo(bar: Bar(value: 42));
    let bar: &Bar = &foo.bar;
    sink(foo);
    let value: &Int = &bar.value;
}

}